--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/res.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/res.css">
     <title>Document</title>
 </head>
 <body>
@@ -222,3 +222,4 @@
 </body>
 
 </html>
+
