--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img src="/assets/about1.jpg" alt="man crosing the road">
+                    <img src="assets/about1.jpg" alt="man crosing the road">
                 </div>
                 <div class="about-description">
                     <p class="w1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt nihil aperiam eius earum ea optio libero impedit velit voluptate temporibus consequuntur eligendi harum error placeat, necessitatibus ducimus dolorum quod dicta.</p>
@@ -78,12 +78,12 @@
                     </div>
                     <div class="client-col">
                         <ul class="client-sub-row">
-                            <li><img src="/assets/freelancer.svg" alt="freelancer logo"></li>
-                            <li><img src="/assets/dell-technologies-logo.svg" alt="dell technologies icon"></li>
-                            <li><img src="/assets/logo-amazon.svg" alt="logo amazon"></li>
-                            <li><img src="/assets/samsung-8.svg" alt="samsung logo"></li>
-                            <li><img src="/assets/tata-consultancy-services-1.svg" alt="tata consultancy services logo"></li>
-                            <li><img src="/assets/unity-technologies-logo.svg" alt="unity technologies logo"></li>
+                            <li><img src="assets/freelancer.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/dell-technologies-logo.svg" alt="dell technologies icon"></li>
+                            <li><img src="assets/logo-amazon.svg" alt="logo amazon"></li>
+                            <li><img src="assets/samsung-8.svg" alt="samsung logo"></li>
+                            <li><img src="assets/tata-consultancy-services-1.svg" alt="tata consultancy services logo"></li>
+                            <li><img src="assets/unity-technologies-logo.svg" alt="unity technologies logo"></li>
                         </ul>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                                 </h3>
                             </div>
                             <div class="sub-work-col">
-                                <img src="/assets/work-img/p6.png" alt="">
+                                <img src="assets/work-img/p6.png" alt="">
                             </div>
                             <div class="sub-work-col">
                                 <h4>
@@ -218,8 +218,9 @@
          </div>
        </div>
     </main>
-    <script src="/script/main.js"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
+
 
