--- a/index.html
+++ b/index.html
@@ -41,33 +41,47 @@
             <div class="about-section wapper1 wapperx bb">
                 <div class="bottom-nav-icon">
                     <div class="icon-box">
+                        <div class="round-text">
+                            <p>Creativ Ux / Ui designer - Amar Rakhpasre | </p>
+                        </div>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M13.0001 16.1716L18.3641 10.8076L19.7783 12.2218L12.0001 20L4.22192 12.2218L5.63614 10.8076L11.0001 16.1716V4H13.0001V16.1716Z"></path></svg>
                     </div>
                 </div>
                 <div class="about-img wapper2" id="experiences">
                     <div class="time-line-box">
-                        <ul class="time-line-list wapper3">
-                            <li><h5><span class="p2">Ex. frontend devloper at </span>Bharat Intern</h5>
-                            <div class="d-flex-row w2"><span class="p3">2023 - 2024</span><span class="p3">Mumbai,India</span></div>
-                            </li>
-                              <li><h5><span class="p2">Ex. frontend devloper at </span>Bharat Intern</h5>
-                            <div class="d-flex-row w2"><span class="p3">2023 - 2024</span><span class="p3">Mumbai,India</span></div>
-                            </li>
-                              <li><h5><span class="p2">Ex. frontend devloper at </span>Bharat Intern</h5>
-                            <div class="d-flex-row w2"><span class="p3">2023 - 2024</span><span class="p3">Mumbai,India</span></div>
-                            </li>
-                              <li><h5><span class="p2">Ex. frontend devloper at </span>Bharat Intern</h5>
-                            <div class="d-flex-row w2"><span class="p3">2023 - 2024</span><span class="p3">Mumbai,India</span></div>
-                            </li>
-                              <li><h5><span class="p2">Ex. frontend devloper at </span>Bharat Intern</h5>
-                            <div class="d-flex-row w2"><span class="p3">2023 - 2024</span><span class="p3">Mumbai,India</span></div>
-                            </li>
-                        </ul>
+                     <ul class="time-line-list wapper3">
+
+                        <li>
+                            <h5><span class="p2">Intern Frontend & .NET Developer at <br></span>Anantsoft</h5>
+                            <div class="d-flex-row w2">
+                                <span class="p3">Nov 2024 – Sep 2025</span>
+                                <span class="p3">Thane, India</span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <h5><span class="p2">Frontend Development Intern at <br></span>Bharat Intern</h5>
+                            <div class="d-flex-row w2">
+                                <span class="p3">May 2024 – Jun 2024</span>
+                                <span class="p3">Mumbai, India</span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <h5><span class="p2">Operations Executive Intern at <br></span>DTDC Express Ltd.</h5>
+                            <div class="d-flex-row w2">
+                                <span class="p3">Feb 2021 – May 2022</span>
+                                <span class="p3">Mumbai, India</span>
+                            </div>
+                        </li>
+
+                    </ul>
+
                     </div>
                     <img src="assets/about1.jpg" alt="man crosing the road">
                 </div>
                 <div class="about-description">
-                    <p class="w1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt nihil aperiam eius earum ea optio libero impedit velit voluptate temporibus consequuntur eligendi harum error placeat, necessitatibus ducimus dolorum quod dicta.</p>
+                    <p class="w1 p2">I am a dedicated fresher with hands-on internship experience in frontend and backend web development. Eager to learn, grow, and contribute to building efficient and user-friendly applications.</p>
                 </div>
             </div>
 
@@ -78,12 +92,23 @@
                     </div>
                     <div class="client-col">
                         <ul class="client-sub-row">
-                            <li><img src="assets/freelancer.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/dell-technologies-logo.svg" alt="dell technologies icon"></li>
-                            <li><img src="assets/logo-amazon.svg" alt="logo amazon"></li>
-                            <li><img src="assets/samsung-8.svg" alt="samsung logo"></li>
-                            <li><img src="assets/tata-consultancy-services-1.svg" alt="tata consultancy services logo"></li>
-                            <li><img src="assets/unity-technologies-logo.svg" alt="unity technologies logo"></li>
+                            <li><img src="assets/tech-icon/amazonaws-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/blazor-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/css3-01-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/dot-net-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/figma-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/icon2.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/icon3.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/icon4.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/icon5.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/javascript-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/jira-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/jquery-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/microsoft-azure-logo-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/microsoftsqlserver-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/next-js-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/php02-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/react-svgrepo-com.svg" alt="freelancer logo"></li>
                         </ul>
                     </div>
                 </div>
@@ -99,9 +124,9 @@
                     <div class="work-col">
                         <div class="sub-work-row">
                             <div class="sub-work-col work-title">
-                                <h3>
+                                <h4>
                                     Chemical <br> Enginering <br> Educational <br> website  
-                                </h3>
+                                </h4>
                             </div>
                             <div class="sub-work-col">
                                 <img src="assets/work-img/p6.png" alt="">
@@ -124,6 +149,19 @@
                     <div class="ss-col">
                         <div class="sub-ss-row">
 
+                            <!-- <div class="sub-ss-col">
+                                <div class="card-head w0 bg-card-gry pst">
+                                    <h3>Website Design</h3>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt nihil aperiam eius earum ea optio libero impedit velit voluptate temporibus consequuntur eligendi harum error placeat, necessitatibus ducimus dolorum quod dicta.</p>
+                                </div>
+                                <div class="ss-cta-box bg-card-gry pst">
+                                         <p class="p2">Lorem ipsum dolor sit amet.</p>
+                                        <button class="btn">
+                                            <span>Let's Connects</span><i class="ri-arrow-right-up-line"></i>
+                                        </button>
+                                </div>
+                            </div>
+
                             <div class="sub-ss-col">
                                 <div class="card-head w0 bg-card-gry pst">
                                     <h3>Website Design</h3>
@@ -135,20 +173,49 @@
                                             <span>Let's Connects</span><i class="ri-arrow-right-up-line"></i>
                                         </button>
                                 </div>
-                            </div>
+                            </div> -->
 
-                              <div class="sub-ss-col">
+
+
+                            <div class="sub-ss-col">
                                 <div class="card-head w0 bg-card-gry pst">
-                                    <h3>Website Design</h3>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt nihil aperiam eius earum ea optio libero impedit velit voluptate temporibus consequuntur eligendi harum error placeat, necessitatibus ducimus dolorum quod dicta.</p>
+                                    <h3>Web Design</h3>
+                                    <p>I design clean, modern, and responsive website layouts that focus on usability and visual appeal, ensuring a great user experience across all devices.</p>
                                 </div>
                                 <div class="ss-cta-box bg-card-gry pst">
-                                         <p class="p2">Lorem ipsum dolor sit amet.</p>
-                                        <button class="btn">
-                                            <span>Let's Connects</span><i class="ri-arrow-right-up-line"></i>
-                                        </button>
+                                    <p class="p2">Creating intuitive and engaging designs.</p>
+                                    <button class="btn">
+                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                    </button>
                                 </div>
                             </div>
+
+                            <div class="sub-ss-col">
+                                <div class="card-head w0 bg-card-gry pst">
+                                    <h3>Frontend Development</h3>
+                                    <p>Implementing interactive and responsive UI features using HTML, CSS, JavaScript, and Bootstrap, optimized for performance and accessibility.</p>
+                                </div>
+                                <div class="ss-cta-box bg-card-gry pst">
+                                    <p class="p2">Building user-centric frontends.</p>
+                                    <button class="btn">
+                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="sub-ss-col">
+                                <div class="card-head w0 bg-card-gry pst">
+                                    <h3>Backend Development & Databases</h3>
+                                    <p>Supporting secure and scalable backend solutions using ASP.NET Core MVC, Web API, and SQL Server, ensuring seamless data communication and processing.</p>
+                                </div>
+                                <div class="ss-cta-box bg-card-gry pst">
+                                    <p class="p2">Reliable backend solutions.</p>
+                                    <button class="btn">
+                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                    </button>
+                                </div>
+                            </div>
+
 
                         </div>
                     </div>
@@ -158,15 +225,17 @@
             <div class="contact-section wapper1 wapperx bb" id="contact">
                 <div>
                     <div class="col">
-                        <h2>let's talk.</h2>
+                        <h2>Let’s Talk.</h2>
                     </div>
                     <div class="col">
                         <div class="row wapper1">
                             <div class="col">
-                                <p class="w2 p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aperiam eum facere.</p>
+                                <p class="w2 p2">
+                                    I’m eager to collaborate on exciting web development projects. Whether it’s building interactive websites, backend solutions, or solving complex problems, I’m ready to contribute.
+                                </p>
                             </div>
                             <div class="col">
-                                <h4 class="w2">And create some stuff together!</h4>
+                                <h4 class="w2">Let’s connect and create something amazing together!</h4>
                             </div>
                         </div>
                     </div>
@@ -176,12 +245,17 @@
             <footer class="wapper1-2 wapperx" >
                 <div class="col">
                     <div class="row bb">
-                        <p class="w3 p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quidem et vitae cum vel quasi aliquid ex quo dolor pariatur? Rem perferendis odio harum aliquam exercitationem, quibusdam maiores error minima?</p>
-                    </div>
+                        <p class="w3 p3">
+                            I’m Amar Dharma Rakhpasre, a passionate Web Developer specializing in creating clean, responsive websites and backend solutions. I focus on delivering user-friendly and efficient applications.
+                        </p>                    </div>
                     <div class="jc-sb fotter-nav">
                         <div class="col f1 add-section bb">
-                            <p class="wapper-bottom w3 p2">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
-                            <p class="wapper-bottom w3 p2">Lorem ipsum dolor sit amet.</p>
+                             <p class="wapper-bottom w2 p2">
+                                📍 Ghatkopar (W), Mumbai, India  
+                            </p>
+                            <p class="wapper-bottom w2 p2">
+                                📧 rakhpasreamar@gmail.com | 📞 +91 74002 40169  
+                            </p>
                         </div>
                         <div class="col bb">
                             <h4>See My Work</h4>
@@ -220,7 +294,4 @@
     </main>
     <script src="script/main.js"></script>
 </body>
-
 </html>
-
-
