--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 📍 Ghatkopar (W), Mumbai, India  
                             </p>
                             <p class="wapper-bottom w2 p2">
-                                📧 rakhpasreamar@gmail.com | 📞 +91 74002 40169  
+                                📧 rakhpasreamar@gmail.com <br> 📞 +91 74002 40169  
                             </p>
                         </div>
                         <div class="col bb">
@@ -295,3 +295,4 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
