--- a/index.html
+++ b/index.html
@@ -254,24 +254,23 @@
                                 📍 Ghatkopar (W), Mumbai, India  
                             </p>
                             <p class="wapper-bottom w2 p2">
-                                📧 rakhpasreamar@gmail.com <br> 📞 +91 74002 40169  
+                                <a href="mailto:rakhpasreamar@gmail.com">📧 rakhpasreamar@gmail.com</a>   <br> <a href="tel:+1800229933">📞 +91 74002 40169</a>  
                             </p>
                         </div>
                         <div class="col bb">
                             <h4>See My Work</h4>
-                            <ul>
-                                <li><a href="#"></a></li>
+                            <ul>lin
                                 <li><a href="#">Dribbble</a></li>
                                 <li><a href="#">Pinterest</a></li>
-                                <li><a href="#">GitHub</a></li>
+                                <li><a href="https://github.com/amar-rakhpasre" target="_blank">GitHub</a></li>
                             </ul>
                         </div>
                         <div class="col bb">
                             <h4>Connect Me</h4>
                             <ul>
-                                <li><a href="#">Linkdin</a></li>
-                                <li><a href="#">Mediam</a></li>
-                                <li><a href="#">Reddit</a></li>
+                                <li><a href="https://www.linkedin.com/in/amar-rakhpasre-72b80928a/" target="_blank">Linkdin</a></li>
+                                <li><a href="https://medium.com/@rakhpasreamar" target="_blank">Mediam</a></li>
+                                <li><a href="https://www.reddit.com/user/Yam_Doot" target="_blank">Reddit</a></li>
                                 <li><a href="#">Instagram</a></li>
                             </ul>
                         </div>
@@ -279,7 +278,7 @@
                             <h4>Contact me</h4>
                             <ul>
                                 <li><p class="Online">Online</p></li>
-                                <li><a href="#">rakhpasreamar@gmail.com</a></li>
+                                <li><a href="tel:+1800229933">rakhpasreamar@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -295,4 +294,5 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
