--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 </h4>
                             </div>
                             <div class="sub-work-col">
-                                <img src="assets/work-img/p6.png" alt="">
+                                <a href="https://askcheme.com/core/Pages/Public/Home_Page" target="_blank"><img src="assets/work-img/p6.png" alt="papaer plane image"></a>
                             </div>
                             <div class="sub-work-col">
                                 <h4>
@@ -185,7 +185,7 @@
                                 <div class="ss-cta-box bg-card-gry pst">
                                     <p class="p2">Creating intuitive and engaging designs.</p>
                                     <button class="btn">
-                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                        <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
                                 </div>
                             </div>
@@ -198,7 +198,7 @@
                                 <div class="ss-cta-box bg-card-gry pst">
                                     <p class="p2">Building user-centric frontends.</p>
                                     <button class="btn">
-                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                        <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
                                 <div class="ss-cta-box bg-card-gry pst">
                                     <p class="p2">Reliable backend solutions.</p>
                                     <button class="btn">
-                                        <a href="#"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
+                                        <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
                                 </div>
                             </div>
@@ -294,5 +294,6 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
