--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <p>I design clean, modern, and responsive website layouts that focus on usability and visual appeal, ensuring a great user experience across all devices.</p>
                                 </div>
                                 <div class="ss-cta-box bg-card-gry pst">
-                                    <p class="p2">Creating intuitive and engaging designs.</p>
+                                    <p class="p2 w2">Creating intuitive and engaging designs.</p>
                                     <button class="btn">
                                         <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
@@ -196,7 +196,7 @@
                                     <p>Implementing interactive and responsive UI features using HTML, CSS, JavaScript, and Bootstrap, optimized for performance and accessibility.</p>
                                 </div>
                                 <div class="ss-cta-box bg-card-gry pst">
-                                    <p class="p2">Building user-centric frontends.</p>
+                                    <p class="p2 w2">Building user-centric frontends.</p>
                                     <button class="btn">
                                         <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
@@ -209,7 +209,7 @@
                                     <p>Supporting secure and scalable backend solutions using ASP.NET Core MVC, Web API, and SQL Server, ensuring seamless data communication and processing.</p>
                                 </div>
                                 <div class="ss-cta-box bg-card-gry pst">
-                                    <p class="p2">Reliable backend solutions.</p>
+                                    <p class="p2 w2">Reliable backend solutions.</p>
                                     <button class="btn">
                                         <a href="mailto:rakhpasreamar@gmail.com"><span>Let's Connect</span><i class="ri-arrow-right-up-line"></i></a>
                                     </button>
@@ -294,6 +294,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
