--- a/index.html
+++ b/index.html
@@ -253,9 +253,6 @@
                              <p class="wapper-bottom w2 p2">
                                 📍 Ghatkopar (W), Mumbai, India  
                             </p>
-                            <p class="wapper-bottom w2 p2">
-                                <a href="mailto:rakhpasreamar@gmail.com">📧 rakhpasreamar@gmail.com</a>   <br> <a href="tel:+1800229933">📞 +91 74002 40169</a>  
-                            </p>
                         </div>
                         <div class="col bb">
                             <h4>See My Work</h4>
@@ -278,7 +275,8 @@
                             <h4>Contact me</h4>
                             <ul>
                                 <li><p class="Online">Online</p></li>
-                                <li><a href="tel:+1800229933">rakhpasreamar@gmail.com</a></li>
+                                <li><a href="#"><i class="ri-mail-ai-line"></i> rakhpasreamar@gmail.com</a></li>
+                                <li><a href="tel:+7400240169"><i class="ri-phone-line"></i> +91 74002 40169</a></li>
                             </ul>
                         </div>
                     </div>
@@ -294,6 +292,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
