--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
                         </div>
                         <div class="col bb">
                             <h4>See My Work</h4>
-                            <ul>lin
+                            <ul>
+                                <li><a href="https://www.figma.com/files/team/1339247140889464508/project/204893825?fuid=1339247135586672680">Figma</a></li>
                                 <li><a href="#">Dribbble</a></li>
                                 <li><a href="#">Pinterest</a></li>
                                 <li><a href="https://github.com/amar-rakhpasre" target="_blank">GitHub</a></li>
@@ -292,6 +293,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
