--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <div class="col bb">
                             <h4>Contact me</h4>
                             <ul>
-                                <li><p class="Online">Online</p></li>
+                                <li><p class="Online">Available</p></li>
                                 <li><a href="#"><i class="ri-mail-ai-line"></i> rakhpasreamar@gmail.com</a></li>
                                 <li><a href="tel:+7400240169"><i class="ri-phone-line"></i> +91 74002 40169</a></li>
                             </ul>
@@ -293,6 +293,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
