--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
        <div class="container-box">
-         <div class="left-side">
+         <div class="left-side active">
             <nav class="nav-postion vh100 d-flex-column wapperx wapper4">
                 <ul class="row">
                     <li class="wapperx-1"><a href="#">Amar Rakhpasre</a></li>
@@ -293,6 +293,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
