--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </ul>
 
                     </div>
-                    <img src="assets/about1.jpg" alt="man crosing the road">
+                    <img src="assets/about1.jpg" alt="man crosing the road" loading="lazy">
                 </div>
                 <div class="about-description">
                     <p class="w1 p2">I am a dedicated fresher with hands-on internship experience in frontend and backend web development. Eager to learn, grow, and contribute to building efficient and user-friendly applications.</p>
@@ -92,23 +92,23 @@
                     </div>
                     <div class="client-col">
                         <ul class="client-sub-row">
-                            <li><img src="assets/tech-icon/amazonaws-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/blazor-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/css3-01-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/dot-net-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/figma-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/icon2.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/icon3.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/icon4.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/icon5.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/javascript-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/jira-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/jquery-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/microsoft-azure-logo-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/microsoftsqlserver-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/next-js-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/php02-svgrepo-com.svg" alt="freelancer logo"></li>
-                            <li><img src="assets/tech-icon/react-svgrepo-com.svg" alt="freelancer logo"></li>
+                            <li><img src="assets/tech-icon/amazonaws-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/blazor-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/css3-01-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/dot-net-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/figma-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/icon2.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/icon3.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/icon4.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/icon5.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/javascript-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/jira-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/jquery-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/microsoft-azure-logo-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/microsoftsqlserver-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/next-js-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/php02-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
+                            <li><img src="assets/tech-icon/react-svgrepo-com.svg" alt="freelancer logo" loading="lazy"></li>
                         </ul>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                                 </h4>
                             </div>
                             <div class="sub-work-col">
-                                <a href="https://askcheme.com/core/Pages/Public/Home_Page" target="_blank"><img src="assets/work-img/p6.png" alt="papaer plane image"></a>
+                                <a href="https://askcheme.com/core/Pages/Public/Home_Page" target="_blank"><img src="assets/work-img/p6.png" alt="papaer plane image" loading="lazy"></a>
                             </div>
                             <div class="sub-work-col">
                                 <h4>
@@ -293,6 +293,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
