--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <div class="left-side active">
             <nav class="nav-postion vh100 d-flex-column wapperx wapper4">
                 <ul class="row">
-                    <li class="wapperx-1"><a href="#">Amar Rakhpasre</a></li>
+                    <li class="wapperx-1" style="place-content: center;"><a href="#">Amar Rakhpasre</a></li>
                     <li><button class="btn menu-btn"><i class="ri-close-line menu-icon"></i></button></li>
                 </ul>
                 <ul>
@@ -293,6 +293,7 @@
     <script src="script/main.js"></script>
 </body>
 </html>
+
 
 
 
